--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,28 @@
     "predev": "graphql-codegen --config codegen.yml",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "hardhat run scripts/deploy.ts",
+    "deploy:amoy": "hardhat run scripts/deploy.ts --network amoy",
+    "deploy:polygon": "hardhat run scripts/deploy.ts --network polygon",
+    "mint": "hardhat run scripts/mint.ts",
+    "mint:amoy": "hardhat run scripts/mint.ts --network amoy",
+    "mint:olympiad": "hardhat run scripts/mint-olympiad-winners.ts",
+    "mint:olympiad:amoy": "hardhat run scripts/mint-olympiad-winners.ts --network amoy",
+    "mint:olympiad:polygon": "hardhat run scripts/mint-olympiad-winners.ts --network polygon",
+    "bulk-mint": "hardhat run scripts/bulk-mint.ts",
+    "bulk-mint:amoy": "hardhat run scripts/bulk-mint.ts --network amoy",
+    "bulk-mint:json": "hardhat run scripts/bulk-mint-from-json.ts",
+    "bulk-mint:json:amoy": "hardhat run scripts/bulk-mint-from-json.ts --network amoy",
+    "bulk-mint:db": "hardhat run scripts/bulk-mint-from-database.ts",
+    "bulk-mint:db:amoy": "hardhat run scripts/bulk-mint-from-database.ts --network amoy",
+    "check-nfts": "hardhat run scripts/check-nfts.ts",
+    "check-nfts:amoy": "hardhat run scripts/check-nfts.ts --network amoy",
+    "check-certificates": "hardhat run scripts/check-certificates.ts",
+    "check-certificates:amoy": "hardhat run scripts/check-certificates.ts --network amoy",
+    "check-certificates:polygon": "hardhat run scripts/check-certificates.ts --network polygon",
+    "compile": "hardhat compile",
+    "test": "hardhat test"
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
@@ -15,6 +36,9 @@
     "@graphql-codegen/cli": "^6.0.0",
     "@graphql-codegen/typescript": "^5.0.0",
     "@graphql-codegen/typescript-resolvers": "^5.0.0",
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.2",
+    "ethers": "^6.15.0",
     "graphql": "^16.11.0",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
@@ -23,13 +47,28 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@tailwindcss/postcss": "^4",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chai": "^4.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "hardhat": "^2.22.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.0",
     "typescript": "^5"
   }
 }
