--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,17 @@
     "@graphql-codegen/typescript-operations": "^5.0.0",
     "@graphql-codegen/typescript-react-apollo": "^4.3.3",
     "@graphql-codegen/typescript-resolvers": "^5.0.0",
+    "@types/three": "^0.180.0",
     "graphql": "^16.11.0",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "three": "^0.180.0",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
