--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@graphql-codegen/typescript-resolvers": "^5.0.0",
     "@livekit/components-react": "^2.9.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/dom-mediacapture-record": "^1.0.22",
@@ -26,6 +27,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.15",
     "graphql": "^16.11.0",
     "gsap": "^3.13.0",
@@ -36,6 +38,7 @@
     "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^3.3.1",
